--- a/src/web/assets/css/product.scss
+++ b/src/web/assets/css/product.scss
@@ -30,6 +30,292 @@
   vertical-align: middle;
 }
 
+.review__sort {
+  position: relative;
+  flex: 1;
+}
+.review_sort--head {
+  position: relative;
+  width: 115px;
+  padding: 15px 10px 15px 20px;
+  border-radius: 15px;
+  border: 1px solid #000000;
+  font-size: 18px;
+  text-align: left;
+  .arrow {
+    position: absolute;
+    right: 12px; 
+    top: 50%; 
+    @include mixins.translate(0, -50%);
+    width: 12px;
+    height: 14px;
+    &::after {
+      content: '';
+      display: block;
+      width: 10px;
+      height: 10px;
+      border-top: 1px solid #000;
+      border-right: 1px solid #000;
+      transform: rotate(135deg);
+    }
+  }
+}
+.review__sorting {
+  display: none;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  padding: 12px 10px 12px 20px;
+  border-radius: 15px;
+  border: 1px solid #000000;
+  border-top: 0;
+  background-color: #ffffff;
+  li {
+    text-align: left;
+  }
+  a {
+    display: block;
+    padding: 15px 0;
+    font-size: 18px;
+  }
+}
+
+.review__list {
+  overflow: hidden;
+}
+.review__list--cont {
+  margin-right: -40px;
+  margin-bottom: 20px;
+  overflow: hidden;
+  text-align: left;
+  border-bottom: 1px solid #000000;
+  .review__list--item {
+    padding-right: 40px;
+    .review__list--line {
+      width: 100%;
+      height: 1px;
+      background-color: #000000;
+      margin-top: 20px;
+      margin-bottom: 20px;
+    }
+    &:last-of-type {
+      .review__list--line {
+        display: none;
+      }
+    }
+  }
+  .rv__product {
+    display: flex;
+  }
+  .rv__figure {
+    width: 48px;
+    height: 48px;
+    margin-right: 10px;
+  }
+  .rv__box {
+    width: calc(100% - 148px);
+  }
+  .rv__prname {
+    font-size: 16px;
+    @include mixins.PtdMedium();
+  }
+  .rv__prcode {
+    display: block;
+    margin-top: 7px;
+    font-size: 12px;
+    @include mixins.PtdMedium();
+  }
+  .rv__count {
+    width: 90px;
+    align-items: flex-end;
+  }
+  .rv__text {
+    padding-right: 115px;
+    margin-bottom: 15px;
+    font-size: 24px;
+    line-height: 1.3;
+    word-break: keep-all;
+  }
+  .rv__thumnb {
+    position: relative;
+    width: 180px;
+    height: 180px;
+    border-radius: 42px;
+    overflow: hidden;
+    span {
+      display: flex;
+      align-items: center;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      @include mixins.translate(-50%, -50%);
+      border: 1px solid #5eecfa;
+      border-radius: 28px;
+      padding: 8px 15px;
+      font-size: 40px;
+      font-weight: 600;
+      color: #5eecfa;
+      vertical-align: middle;
+      z-index: 1;
+      em {
+        margin-top: -10px;
+        font-size: 34px;
+      }
+    }
+    img {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      @include mixins.translate(-50%, -50%);
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+  .rv__morecnt {
+    display: flex;
+    margin-top: 20px;
+  }
+  .btn__rvlike {
+    display: inline-block;
+    @include icons.retina-sprite(icons.$ico-like-group);
+    &.seleted {
+      @include icons.retina-sprite(icons.$ico-like-on-group);
+    }
+  }
+  .morecnt_section {
+    margin-right: 18px;
+    @include mixins.PtdMedium();
+  }
+  .rv__moreinfo {
+    position: relative;
+    display: flex;
+    margin-top: 38px;
+    .info_tag {
+      margin-right: 10px;
+      border:1px solid #000000;
+      border-radius: 15px;
+      padding:9px 10px;
+      @include mixins.PtdMedium();
+    }
+  }
+  .btn__rvshare {
+    position: absolute;
+    right: 0;
+    bottom: 10px;
+    display: inline-block;
+    @include icons.retina-sprite(icons.$ico-share-group);
+    &.seleted {
+    }
+  }
+
+  @include breakpoints.mobile() {
+    margin-left: 15px;
+    margin-right: 15px;
+    border-bottom: 0;
+    .review__list--item {
+      padding-right: 0;
+      padding: 20px 0px;
+      border-bottom: 1px solid #000000;
+    }
+    .rv__prname {
+      font-size: 12px;
+    }
+    .rv__prcode {
+      font-size: 10px;
+    }
+    .rv__text {
+      padding-right: 0;
+      font-size: 16px;
+    }
+    .rv__count {
+      font-size: 12px;
+      text-align: right;
+    }
+    .rv__thumnb {
+      width: 110px;
+      height: 110px;
+      border-radius: 26px;
+      span {
+        padding: 6px 13px;
+        font-size: 24px;
+        em {
+          font-size: 21px;
+        }
+      }
+    }
+    .morecnt_section {
+      margin-right: 10px;
+      font-size: 11px;
+      &:last-child {
+        margin-right:0;
+      }
+    }
+    .rv__morecnt {
+      margin-top: 15px;
+    }
+    .rv__moreinfo {
+      margin-top: 20px;
+      .info_tag {
+        padding: 8px 13px;
+        margin-right: 5px;
+        font-size: 11px;
+      }
+    }
+    .btn__rvlike {
+      width: 16px;
+      @include mixins.sprite(mo_icons.$ico-like);
+      &.seleted {
+        @include mixins.sprite(mo_icons.$ico-like-on);
+      }
+    }
+    .review__list--line {display: none;}
+  }
+} //.review__list--cont 
+
+.review_paging {
+  display: flex;
+  flex: 1;
+  height: 43px;
+  align-items: center;
+  .btn__prev, .btn__next {
+    display: inline-block;
+    width: 43px;
+    height: 43px;
+  }
+  .paging_number {
+    width:70px;
+    height: 100%;
+    margin: 0 6px;
+    border: 1px solid #000000;
+    border-radius: 14px;
+    align-items: center;
+    vertical-align: middle;
+    text-align: center;
+    p {
+      line-height: 40px;
+    }
+    p, span {
+      display: inline-block;
+      font-size: 16px;
+    }
+  }
+  @include breakpoints.mobile() {
+    height: 36px;
+    justify-content: center;
+    .btn__prev, .btn__next { 
+      width: 36px;
+      height: 36px;
+    }
+    .paging_number {
+      p, span {
+        font-size: 14px;
+        line-height: 34px;
+      }
+    }
+  }
+}
+
 .detail__quick {
   position: fixed;
   left: 40px;
@@ -503,55 +789,6 @@
       display: block;
       clear: both;
     }
-    .review_sort--head {
-      position: relative;
-      width: 115px;
-      padding: 15px 10px 15px 20px;
-      border-radius: 15px;
-      border: 1px solid #000000;
-      font-size: 18px;
-      text-align: left;
-      .arrow {
-        position: absolute;
-        right: 12px; 
-        top: 50%; 
-        @include mixins.translate(0, -50%);
-        width: 12px;
-        height: 14px;
-        &::after {
-          content: '';
-          display: block;
-          width: 10px;
-          height: 10px;
-          border-top: 1px solid #000;
-          border-right: 1px solid #000;
-          transform: rotate(135deg);
-        }
-      }
-    }
-    .review__sort {
-      position: relative;
-      flex: 1;
-    }
-    .review__sorting {
-      display: none;
-      position: absolute;
-      top: 0;
-      width: 100%;
-      padding: 12px 10px 12px 20px;
-      border-radius: 15px;
-      border: 1px solid #000000;
-      border-top: 0;
-      background-color: #ffffff;
-      li {
-        text-align: left;
-      }
-      a {
-        display: block;
-        padding: 15px 0;
-        font-size: 18px;
-      }
-    }
     .review__etc {
       flex: 1;
       text-align: right;
@@ -564,225 +801,6 @@
       font-size: 18px;
     }
   }
-  .review__list {
-    overflow: hidden;
-  }
-  .review__list--cont {
-    margin-right: -40px;
-    margin-bottom: 20px;
-    overflow: hidden;
-    text-align: left;
-    border-bottom: 1px solid #000000;
-    .review__list--item {
-      padding-right: 40px;
-      .review__list--line {
-        width: 100%;
-        height: 1px;
-        background-color: #000000;
-        margin-top: 20px;
-        margin-bottom: 20px;
-      }
-      &:last-of-type {
-        .review__list--line {
-          display: none;
-        }
-      }
-    }
-    .rv__product {
-      display: flex;
-    }
-    .rv__figure {
-      width: 48px;
-      height: 48px;
-      margin-right: 10px;
-    }
-    .rv__box {
-      width: calc(100% - 148px);
-    }
-    .rv__prname {
-      font-size: 16px;
-      @include mixins.PtdMedium();
-    }
-    .rv__prcode {
-      display: block;
-      margin-top: 7px;
-      font-size: 12px;
-      @include mixins.PtdMedium();
-    }
-    .rv__count {
-      width: 90px;
-      align-items: flex-end;
-    }
-    .rv__text {
-      padding-right: 115px;
-      margin-bottom: 15px;
-      font-size: 24px;
-      line-height: 1.3;
-      word-break: keep-all;
-    }
-    .rv__thumnb {
-      position: relative;
-      width: 180px;
-      height: 180px;
-      border-radius: 42px;
-      overflow: hidden;
-      span {
-        display: flex;
-        align-items: center;
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        @include mixins.translate(-50%, -50%);
-        border: 1px solid #5eecfa;
-        border-radius: 28px;
-        padding: 8px 15px;
-        font-size: 40px;
-        font-weight: 600;
-        color: #5eecfa;
-        vertical-align: middle;
-        z-index: 1;
-        em {
-          margin-top: -10px;
-          font-size: 34px;
-        }
-      }
-      img {
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        @include mixins.translate(-50%, -50%);
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
-    }
-    .rv__morecnt {
-      display: flex;
-      margin-top: 20px;
-    }
-    .btn__rvlike {
-      display: inline-block;
-      @include icons.retina-sprite(icons.$ico-like-group);
-      &.seleted {
-        @include icons.retina-sprite(icons.$ico-like-on-group);
-      }
-    }
-    .morecnt_section {
-      margin-right: 18px;
-      @include mixins.PtdMedium();
-    }
-    .rv__moreinfo {
-      position: relative;
-      display: flex;
-      margin-top: 38px;
-      .info_tag {
-        margin-right: 10px;
-        border:1px solid #000000;
-        border-radius: 15px;
-        padding:9px 10px;
-        @include mixins.PtdMedium();
-      }
-    }
-    .btn__rvshare {
-      position: absolute;
-      right: 0;
-      bottom: 10px;
-      display: inline-block;
-      @include icons.retina-sprite(icons.$ico-share-group);
-      &.seleted {
-      }
-    }
-
-    @include breakpoints.mobile() {
-      margin-left: 15px;
-      margin-right: 15px;
-      border-bottom: 0;
-      .review__list--item {
-        padding-right: 0;
-        padding: 20px 0px;
-        border-bottom: 1px solid #000000;
-      }
-      .rv__prname {
-        font-size: 12px;
-      }
-      .rv__prcode {
-        font-size: 10px;
-      }
-      .rv__text {
-        padding-right: 0;
-        font-size: 16px;
-      }
-      .rv__count {
-        font-size: 12px;
-        text-align: right;
-      }
-      .rv__thumnb {
-        width: 110px;
-        height: 110px;
-        border-radius: 26px;
-        span {
-          padding: 6px 13px;
-          font-size: 24px;
-          em {
-            font-size: 21px;
-          }
-        }
-      }
-      .morecnt_section {
-        margin-right: 10px;
-        font-size: 11px;
-        &:last-child {
-          margin-right:0;
-        }
-      }
-      .rv__morecnt {
-        margin-top: 15px;
-      }
-      .rv__moreinfo {
-        margin-top: 20px;
-        .info_tag {
-          padding: 8px 13px;
-          margin-right: 5px;
-          font-size: 11px;
-        }
-      }
-      .btn__rvlike {
-        width: 16px;
-        @include mixins.sprite(mo_icons.$ico-like);
-        &.seleted {
-          @include mixins.sprite(mo_icons.$ico-like-on);
-        }
-      }
-      .review__list--line {display: none;}
-    }
-  } //.review__list--cont 
-  .review_paging {
-    display: flex;
-    flex: 1;
-    height: 43px;
-    align-items: center;
-    .btn__prev, .btn__next {
-      display: inline-block;
-      width: 43px;
-      height: 43px;
-    }
-    .paging_number {
-      width:70px;
-      height: 100%;
-      margin: 0 6px;
-      border: 1px solid #000000;
-      border-radius: 14px;
-      align-items: center;
-      vertical-align: middle;
-      p {
-        line-height: 40px;
-      }
-      p, span {
-        display: inline-block;
-        font-size: 16px;
-      }
-    }
-  }
   .list__bottom {
     .btn__underline {
       font-size: 18px;
@@ -790,21 +808,6 @@
   }
 
   @include breakpoints.mobile() {
-    .review_paging {
-      height: 36px;
-      justify-content: center;
-      .btn__prev, .btn__next { 
-        width: 36px;
-        height: 36px;
-      }
-      .paging_number {
-        p, span {
-          font-size: 14px;
-          line-height: 34px;
-        }
-      }
-    }
-
     .list__bottom {
       .btn__underline {
         font-size: 10px;
@@ -1169,9 +1172,31 @@
   .rvwrap__head {
     display: flex;
     width: 100%;
+    height: 44px;
+    margin-bottom: 20px;
+    align-items: center;
+    justify-content: space-between;
+  }
+  select {
+    width: 165px;
+    height: 100%;
+    border: 1px solid #000000;
+    background-color: #ffffff;
+    font-size: 16px;
+    margin: 0 3px;
+  }
+  input[type=text] {
+    width: 320px;
+    height: 42px;
+    border: 1px solid #000000;
+    background-color: #ffffff;
+    font-size: 16px;
+    margin: 0 3px;
   }
   .head__search {
     display: flex;
+    height: 100%;
+    align-items: center;
   }
   .head__title {
     font-size: 32px;
@@ -1181,5 +1206,37 @@
     display: inline-block;
     height: 44px;
     border: 1px solid #000000;
+    border-radius: 58px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 3px;
+  }
+  label {
+    margin: 0 3px;
+  }
+  .head__sort {
+    height: 100%;
+   .review_sort--head {
+     padding-top: 13px;
+     padding-bottom: 13px;
+     font-size: 16px;
+   } 
+  }
+
+  .review__list--cont {
+    margin-right: -20px;
+    border-bottom: 0;
+    .review__list--item {
+      padding-right: 20px;
+      padding-bottom: 20px;
+    }
+    .item__inner {
+      border: 1px solid #000000;
+      border-radius: 42px;
+      padding: 25px;
+    }
+  }
+  .review_paging {
+    justify-content: center;
   }
 }
